[tool.poetry]
name = "bottle-pymysql"
version = "0.1.4"
description = ""
authors = ['Alexandr N. Zamaraev <tonal@promsoft.ru>', 'Tim Pogue <t.pogue.python@gmail.com']

[tool.poetry.dependencies]
python = "^3.8"
bottle = "*"
PyMySQL = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "*"
pre-commit = "^2.9"
black = "*"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
^.pytest_cache
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
